--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
       <div class="container">
         <br>
         <br>
-        <h1 class="header center white-text">Girlscript Summer Of Code</h1>
         <div class="row center">
           <h5 class="header col s12 light"></h5>
         </div>
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
+        
         <br>
         <br>
 
@@ -127,7 +124,6 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
       </div>
     </div>
@@ -144,13 +140,8 @@
           <h3>
             <i class="mdi-content-send brown-text"></i>
           </h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
-            tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a
-            sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam
-            eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum
-            sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
-            primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4 class="header section-heading">Help Out</h4>
+          <h6 class="header left-align light">You can support GirlScript Summer of Code as a coach, a mentor or as an organizer helping in various areas such as fundraising, editing, working on our sites or helping the students.</h6>
         </div>
       </div>
 
@@ -179,7 +170,7 @@
           <h3>
             <i class="mdi-content-send brown-text"></i>
           </h3>
-          <h4>Schedule</h4>
+          <h4 class="header section-heading">Schedule</h4>
 
           <div class="container timeline-container">
             <ul class="timeline">
