Help-out section added.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Girlscript SOC</title>
 
   <!-- CSS  -->
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
@@ -61,7 +62,7 @@
         <div class="row center">
           <h5 class="header col s12 light"></h5>
         </div>
-        
+
         <br>
         <br>
 
@@ -133,7 +134,7 @@
   </div>
 
   <div class="container">
-    <div class="section">
+    <div class="section help-out">
 
       <div class="row">
         <div class="col s12 center">
@@ -141,7 +142,48 @@
             <i class="mdi-content-send brown-text"></i>
           </h3>
           <h4 class="header section-heading">Help Out</h4>
-          <h6 class="header left-align light">You can support GirlScript Summer of Code as a coach, a mentor or as an organizer helping in various areas such as fundraising, editing, working on our sites or helping the students.</h6>
+          <h6 class="header left-align light section-text">You can support GirlScript Summer of Code as a coach, a mentor or as an organizer helping in various areas such
+            as fundraising, editing, working on our sites or helping the students.</h6>
+
+          <div class="row center" style="margin:20px 0;">
+            <a href="https://bit.ly/GSSoc2018TeamForm" class="section-link" target="_blank">
+              <i class="fa fa-handshake-o" aria-hidden="true"></i>
+              GET IN TOUCH</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+        </div>
+      </div>
+    </div>
+    <div class="parallax">
+      <img src="images/background3.jpg" class="image" alt="Unsplashed background img 3">
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="section help-out">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3>
+            <i class="mdi-content-send brown-text"></i>
+          </h3>
+          <h4 class="header section-heading">WANT TO PARTICIPATE?</h4>
+          <h6 class="header left-align light section-text">Fill in this form first and then add yourself in this project.(Will be released soon)
+          </h6>
+
+          <h6 class="header left-align light section-text">Do you have an exciting idea for a project or want us to help you with your previous one?Then be a mentor in Girlscript
+            Summer Of Code.</h6>
+
+
         </div>
       </div>
 
@@ -153,7 +195,6 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
       </div>
     </div>
