--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   
               <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
             </div>
-            <div class="row center">HELLO</div>
+            <div class="row center"><a class="waves-effect waves-light btn-small deep-orange">Register Here</a></div>
           </div>
   
           <div class="col s12 m6">
@@ -139,7 +139,7 @@
   
               <p class="light">Mentors are experts on the Open Source project the team is working on.At the beginning of the program, they provide a roadmap for the project.They are available throughout the summer to review pull requests,help with concepts and generally support the team.So be a mentor in Girlscript Summer Of Code.</p>
             </div>
-            <div class="row center">HELLO</div>
+            <div class="row center"><a class="waves-effect waves-light btn-small teal">Register Here</a></div>
           </div>
   
          
