--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	
 	<script src="lib/jquery.waypoints.min.js"></script>
+	<script src="lib/noframework.waypoints.min.js"></script>
 	<script src="lib/shortcuts/inview.min.js"></script>
 </head>
 
