changes in content

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
   <div class="container" id="about">
     <div class="section">
         <h4 class="header section-heading center">About GirlScript</h4>
-        <h5 class="header left-align light section-text">Girlscript Summer Of Code is a 3-month long open source project under Girlscript India to build the main website of GirlScript, GirlScript mobile app and websites for various GirlScript Chapters.</h5>
+        <h5 class="header left-align light section-text">
+			GirlScript is the fastest  growing tech-community in India. It is a non-profit project brought to you by GirlScript Foundation to help beginners in technology. Be a part, spread knowledge & happiness..<br><br><br>
+			Girlscript Summer Of Code is a 3-month long open source project under Girlscript India to build the main website of GirlScript, GirlScript mobile app and websites for various GirlScript Chapters.Not only for the accolades we have in our batch but also for the people new to opensource. Right from word go, be it basic git skills, first timers only issues or helping mentors hone their team leading and guiding skills - be it the rookie or the veteran dev - GirlScript Summer of Code offers something for everyone.</h5>
         <h5 class="header left-align light section-text"></h5>
     </div>
   </div>
@@ -136,7 +138,7 @@
   
               <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
             </div>
-            <div class="row center"><a class="waves-effect waves-light btn-small deep-orange">Register Here</a></div>
+            <div class="row center"><a class="waves-effect waves-light btn-small deep-orange">Participate Now!</a></div>
           </div>
   
           <div class="col s12 m6">
@@ -146,7 +148,7 @@
   
               <p class="light">Mentors are experts on the Open Source project the team is working on.At the beginning of the program, they provide a roadmap for the project.They are available throughout the summer to review pull requests,help with concepts and generally support the team.So be a mentor in Girlscript Summer Of Code.</p>
             </div>
-            <div class="row center"><a class="waves-effect waves-light btn-small teal">Register Here</a></div>
+            <div class="row center"><a class="waves-effect waves-light btn-small teal">Be a Mentor!</a></div>
           </div>
   
          
