--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <div class="container" id="about">
     <div class="section">
-        <h4 class="header section-heading center">About GirlScript</h4>
+        <h4 class="header section-heading center" id="gs-heading">About GirlScript</h4>
         <h5 class="header left-align light section-text">
 			GirlScript is the fastest  growing tech-community in India. It is a non-profit project brought to you by GirlScript Foundation to help beginners in technology. Be a part, spread knowledge & happiness..<br><br><br>
 			Girlscript Summer Of Code is a 3-month long open source project under Girlscript India to build the main website of GirlScript, GirlScript mobile app and websites for various GirlScript Chapters.Not only for the accolades we have in our batch but also for the people new to opensource. Right from word go, be it basic git skills, first timers only issues or helping mentors hone their team leading and guiding skills - be it the rookie or the veteran dev - GirlScript Summer of Code offers something for everyone.</h5>
@@ -99,7 +99,7 @@
           <h3>
             <i class="mdi-content-send brown-text"></i>
           </h3>
-          <h4 class="header section-heading">Help Out</h4>
+          <h4 class="header section-heading" id="ho-heading">Help Out</h4>
           <h6 class="header left-align light section-text">You can support GirlScript Summer of Code as a coach, a mentor or as an organizer helping in various areas such
             as fundraising, editing, working on our sites or helping the students.</h6>
 
@@ -127,7 +127,7 @@
   </div>
 
   <div class="container" id="register">
-      <div class="section">
+      <div class="section" id="reg-heading">
           <h4 class="header section-heading center">REGISTER HERE</h4>
         <!--   Icon Section   -->
         <div class="row">
@@ -171,7 +171,7 @@
 	
 	<div class="container" id="about">
     <div class="section">
-        <h4 class="header section-heading center">Prizes And Rewards</h4>
+        <h4 class="header section-heading center" id="p-heading">Prizes And Rewards</h4>
         <h5 class="header left-align align light ">
 Winners will get a lot of goodies and prizes like:<br>
 			
@@ -200,7 +200,7 @@ Therefore gear up for the competion and give it everything you got .</h5>
 	
 	<div class="container" id="about">
     <div class="section">
-        <h4 class="header section-heading center">Code Of Conduct</h4>
+        <h4 class="header section-heading center" id="coc-heading">Code Of Conduct</h4>
         <h5 class="header left-align light align">
 1.Participate in a supporting and active way: In doing so, you contribute to the health and longevity of this community.<br>
 2.Exercise consideration and respect in your speech and actions.<br>
@@ -231,24 +231,17 @@ Additionally, members of the trust committee are available to help community mem
 	
 	<div class="container" id="about">
     <div class="section">
-        <h4 class="header section-heading center to-animate animated" id="1">How This Works</h4>
+        <h4 class="header section-heading center to-animate" id="htw-heading">How This Works</h4>
         <h5 class="header left-align light section-text">
-1.Participants are required to solve the issues and earn points.
-2.At the end of competition, top 50 will be selected by judging the quality of issues solved by them..
-3.Projects registered for the event can be solved to earn points. All of them can be found at Girlscript Summer Of Code Organisation .</h5>
-		<h4 class="header section-heading center">Scoring Criteria</h4>
-        <h5 class="header left-align light section-text">
-Each project will have issues open in it of varying difficulty and each issue will have points associated with it as below:
-
-Rookie: 10 points
-Skilled: 20 points
-Advanced: 30 points
-Expert: 50 points</h5>
+			<ul>
+<li>Participants are required to solve the issues and earn points.</li>
+<li>At the end of competition, top 50 will be selected by judging the quality of issues solved by them..</li>
+<li>Projects registered for the event can be solved to earn points. All of them can be found at Girlscript Summer Of Code Organisation .</li>
+			</ul></h5>
 		
-        <h5 class="header left-align light section-text"></h5>
     </div>
   </div>
-
+	
 	<div class="parallax-container valign-wrapper">
       <div class="section no-pad-bot">
         <div class="container">
@@ -260,9 +253,41 @@ Expert: 50 points</h5>
         <img src="images/4.jpeg" class="image" alt="Unsplashed background img 3">
       </div>
     </div>
+	
+	<div class="container" id="scoring">
+    <div class="section">
+		
+        	<h4 class="header section-heading center" id="sc-heading">Scoring Criteria</h4>
+        <h5 class="header left-align light section-text">
+Each project will have issues open in it of varying difficulty and each issue will have points associated with it as below:
+<ul>
+<li>Rookie: 10 points</li>
+<li>Skilled: 20 points</li>
+<li>Advanced: 30 points</li>
+<li>Expert: 50 points</li>
+			</ul>	
+		</h5>
+		
+        <h5 class="header left-align light section-text"></h5>
+    </div>
+  </div>
+	
+
+
+	<div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center">
+          </div>
+        </div>
+      </div>
+      <div class="parallax">
+        <img src="images/6.jpeg" class="image" alt="Unsplashed background img 3">
+      </div>
+    </div>
  
 
-  <div class="container schedule">
+  <div class="container schedule" id="sch-heading">
     <div class="section">
 
       <div class="row">
@@ -321,28 +346,10 @@ Expert: 50 points</h5>
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support
-            and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Girlscript India Foundation</h5>
+          <p class="grey-text text-lighten-4">GirlScript is the fastest  growing tech-community in India. It is a non-profit project brought to you by GirlScript Foundation to help beginners in technology. Be a part, spread knowledge & happiness..</p>
 
 
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li>
-              <a class="white-text" href="#!">Link 1</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Link 2</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Link 3</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Link 4</a>
-            </li>
-          </ul>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
