--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      
    
     <div class="parallax">
-      <img src="images/background1.jpeg" class="image" alt="Unsplashed background img 1">
+      <img src="images/background1.jpeg" class="image responsive-img" alt="Unsplashed background img 1">
     </div>
   </div>
 
@@ -122,7 +122,7 @@
       </div>
     </div>
     <div class="parallax">
-      <img src="images/2.jpeg" class="image" alt="Unsplashed background img 3">
+      <img src="images/2.jpeg" class="image responsive-img" alt="Unsplashed background img 3">
     </div>
   </div>
 
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="parallax">
-        <img src="images/5.jpeg" class="image" alt="Unsplashed background img 3">
+        <img src="images/5.jpeg" class="image responsive-img" alt="Unsplashed background img 3">
       </div>
     </div>
 	
@@ -194,7 +194,7 @@ Therefore gear up for the competion and give it everything you got .</h5>
         </div>
       </div>
       <div class="parallax">
-        <img src="images/1.jpeg" class="image" alt="Unsplashed background img 3">
+        <img src="images/1.jpeg" class="image responsive-img" alt="Unsplashed background img 3">
       </div>
     </div>
 	
@@ -224,7 +224,7 @@ Additionally, members of the trust committee are available to help community mem
         </div>
       </div>
       <div class="parallax">
-        <img src="images/background3.jpg" class="image" alt="Unsplashed background img 3">
+        <img src="images/background3.jpg" class="image responsive-img" alt="Unsplashed background img 3">
       </div>
     </div>
 	
@@ -250,7 +250,7 @@ Additionally, members of the trust committee are available to help community mem
         </div>
       </div>
       <div class="parallax">
-        <img src="images/4.jpeg" class="image" alt="Unsplashed background img 3">
+        <img src="images/4.jpeg" class="image responsive-img" alt="Unsplashed background img 3">
       </div>
     </div>
 	
@@ -282,7 +282,7 @@ Each project will have issues open in it of varying difficulty and each issue wi
         </div>
       </div>
       <div class="parallax">
-        <img src="images/6.jpeg" class="image" alt="Unsplashed background img 3">
+        <img src="images/6.jpeg" class="image responsive-img " alt="Unsplashed background img 3">
       </div>
     </div>
  
