--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Therefore gear up for the competion and give it everything you got .</h5>
       </div>
     </div>
 	
-	<div class="container" id="about">
+	<div class="container" id="code">
     <div class="section">
         <h4 class="header section-heading center" id="coc-heading">Code Of Conduct</h4>
         <h5 class="header left-align light align">
@@ -373,26 +373,26 @@ Each project will have issues open in it of varying difficulty and each issue wi
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Links</h5>
           <ul>
             <li>
-              <a class="white-text" href="#!">Link 1</a>
+              <a class="white-text" href="#register">Register</a>
             </li>
             <li>
-              <a class="white-text" href="#!">Link 2</a>
+              <a class="white-text" href="#about">About GsSoc</a>
             </li>
             <li>
-              <a class="white-text" href="#!">Link 3</a>
+              <a class="white-text" href="#code">Code of Conduct</a>
             </li>
             <li>
-              <a class="white-text" href="#!">Link 4</a>
+              <a class="white-text" href="#contact">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
-      <div class="container">
+      <div class="container center">
         Made by
         <a class="brown-text text-lighten-3" href="http://materializecss.com">GirlScript Allahabad</a>
       </div>
