--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   
               <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
             </div>
-            <div class="row center"><a class="waves-effect waves-light btn-small deep-orange">Participate Now!</a></div>
+            <div class="row center"><a class="waves-effect waves-light btn-small deep-orange" href="http://bit.ly/participateGSSOC">Participate Now!</a></div>
           </div>
   
           <div class="col s12 m6">
@@ -162,7 +162,7 @@
   
               <p class="light">Mentors are experts on the Open Source project the team is working on.At the beginning of the program, they provide a roadmap for the project.They are available throughout the summer to review pull requests,help with concepts and generally support the team.So be a mentor in Girlscript Summer Of Code.</p>
             </div>
-            <div class="row center"><a class="waves-effect waves-light btn-small teal">Be a Mentor!</a></div>
+            <div class="row center"><a class="waves-effect waves-light btn-small teal" href="http://bit.ly/mentorGSSOC">Be a Mentor!</a></div>
           </div>
   
          
