Updated participant section.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               
               <h5 class="center">Participant</h5>
   
-              <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+              <p class="light">If you have basic git skills or are first timers or even veteran developers, GirlScript Summer of Code would give you a taste of contributing in a long open source projects. Register yourself as a participant for GSSoc 2018 here. (Will be released soon.)</p>
             </div>
             <div class="row center"><a class="waves-effect waves-light btn-small deep-orange" href="http://bit.ly/participateGSSOC">Participate Now!</a></div>
           </div>
