--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Girlscript SOC</title>
+  <title>GirlScript - Summer of Code</title>
 
   <!-- CSS  -->
   
 
-<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
-<link rel="manifest" href="/images/favicon/site.webmanifest">
-<link rel="shortcut icon" href="/images/favicon/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="192x92" href="images/favicon/favicon-16x16.png">
+<link rel="manifest" href="images/favicon/site.webmanifest">
+<link rel="shortcut icon" href="images/favicon/favicon.png">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+<meta name="msapplication-config" content="images/favicon/browserconfig.xml">
+<meta name="theme-color" content="#ff9800">
 
 
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -42,30 +43,39 @@
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo white-text "><img src="images/type.png" class="nav-logo-type "></a>
         <ul class="right hide-on-med-and-down main-menu">
-          <li>
-            <a href="#register"><b>REGISTER</b></a>
-          </li>
-          <li>
-            <a href="#about">About Us</a>
-          </li>
-          <li>
-            <a href="#sponsors">Sponsors</a>
-          </li>
+            <li>
+                <a href="#about">About GsSOC</a>
+              </li>
+              <li>
+                  <a href="#register">Register</a>
+                </li>
+              <li>
+                <a href="#code">Code of Conduct</a>
+              </li>
+              <li>
+                  <a href="#sponsors">Sponsors</a>
+                </li>
           <li>
             <a href="#contactus">Contact Us</a>
           </li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-          <li>
-            <a href="#register">REGISTER</a>
-          </li>
-          <li>
-            <a href="#about">About Us</a>
-          </li>
-          <li>
-            <a href="#sponsors">Sponsors</a>
-          </li>
+          <div class="center">
+            <img class="nav-logo" src="images/type.png">
+            </div>
+            <li>
+                <a href="#about">About Us</a>
+              </li>
+              <li>
+                  <a href="#register">Register</a>
+                </li>
+              <li>
+                <a href="#code">Code of Conduct</a>
+              </li>
+              <li>
+                  <a href="#sponsors">Sponsors</a>
+                </li>
           <li>
             <a href="#contactus">Contact Us</a>
           </li>
@@ -89,7 +99,7 @@
    
     <div class="parallax">
 
-      <img src="images/background1.jpeg" class="image responsive-img" alt="Unsplashed background img 1">
+      <img src="images/background1.jpeg" class="responsive-img image" alt="Unsplashed background img 1">
 
     </div>
   </div>
@@ -189,14 +199,15 @@
         <h5 class="header left-align align light ">
 Winners will get a lot of goodies and prizes like:<br>
 			
-1. The top three performers will get  cash prize.<br>
-2. The top 25 performers will get letter of recommendations and internship opportunities.<br>
-3. The top 50 performers will get T-shirts ,swag etc;<br>
-4.All participants will receive digital certificates.<br>
-Ohh did we mention that the top five performers will get Paid trip to Girlscript India summit.
-Therefore gear up for the competion and give it everything you got .</h5>
+<i class="fa fa-arrow-right" aria-hidden="true"></i> The top three performers will get cash prize.<br>
+<i class="fa fa-arrow-right" aria-hidden="true"></i> The top 25 performers will get letter of recommendations and internship opportunities.<br>
+<i class="fa fa-arrow-right" aria-hidden="true"></i> The top 50 performers will get T-shirts, Swag etc.<br>
+<i class="fa fa-arrow-right" aria-hidden="true"></i> All participants will receive digital certificates.<br><br>
+
+<p class="center">Ohh did we mention that the top five performers will get Paid trip to Girlscript India summit.
+Therefore gear up for the competion and give it everything you got.</p>
+</h5>
 		
-        <h5 class="header left-align light section-text"></h5>
     </div>
   </div>	
 	
@@ -216,12 +227,12 @@ Therefore gear up for the competion and give it everything you got .</h5>
     <div class="section">
         <h4 class="header section-heading center" id="coc-heading">Code Of Conduct</h4>
         <h5 class="header left-align light align">
-1.Participate in a supporting and active way: In doing so, you contribute to the health and longevity of this community.<br>
-2.Exercise consideration and respect in your speech and actions.<br>
-3.Attempt collaboration before conflict.<br>
-4.Refrain from demeaning, discriminatory, or harassing behavior and speech.<br>
-5.Be mindful of your surroundings and of your fellow participants. Alert the trust committee if you notice a dangerous situation, someone in distress, or violations of this Code of Conduct, even if they seem inconsequential.<br><br><br>
-			<b>If You Witness or Are Subject to Unacceptable Behavior</b><br>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i> Participate in a supporting and active way: In doing so, you contribute to the health and longevity of this community.<br>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i> Exercise consideration and respect in your speech and actions.<br>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i> Attempt collaboration before conflict.<br>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i> Refrain from demeaning, discriminatory, or harassing behavior and speech.<br>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i> Be mindful of your surroundings and of your fellow participants. Alert the trust committee if you notice a dangerous situation, someone in distress, or violations of this Code of Conduct, even if they seem inconsequential.<br><br><br>
+			<div class="center" style="font-weight: bold !important;">If You Witness or Are Subject to Unacceptable Behavior?</div><br>
 If you are subject to or witness unacceptable behavior, or have any other concerns, please notify a member of the trust committee as soon as possible.
 
 Additionally, members of the trust committee are available to help community members engage with local law enforcement or to otherwise help those experiencing unacceptable behavior feel safe. In the context of in-person events, organizers will also provide escorts as desired by the person experiencing distress.</h5>
@@ -359,42 +370,69 @@ Each project will have issues open in it of varying difficulty and each issue wi
 
 
 
-  <footer class="page-footer teal">
+  <footer class="page-footer" id="contactus">
     <div class="container">
-      <div class="row center">
-          <div class="col l3 s12">
+      <div class="row">
+          <div class="col l4 s12 center">
               <img src="images/gslogo.png" class="footer-logo">
     
             </div>
-        <div class="col l6 s12">
+
+        <div class="col l8 s12 center">
           <h5 class="white-text">Girlscript India Foundation</h5>
           <p class="grey-text text-lighten-4">GirlScript is the fastest growing tech-community in India. It is a non-profit project brought to you by GirlScript Foundation to help beginners in technology. Be a part, spread knowledge & happiness.</p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li>
-              <a class="white-text" href="#register">Register</a>
-            </li>
-            <li>
-              <a class="white-text" href="#about">About GsSoc</a>
-            </li>
-            <li>
-              <a class="white-text" href="#code">Code of Conduct</a>
-            </li>
-            <li>
-              <a class="white-text" href="#contact">Contact Us</a>
-            </li>
-          </ul>
         </div>
+        <div class="row center">
+          <div class="col l3 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+                <li>
+                    <a class="white-text" href="#about">About GsSOC</a>
+                  </li>
+                  <li>
+                      <a class="white-text" href="#register">Register</a>
+                    </li>
+                  <li>
+                    <a class="white-text" href="#code">Code of Conduct</a>
+                  </li>
+                  <li>
+                      <a class="white-text" href="#sponsors">Sponsors</a>
+                    </li>
+              <li>
+                <a class="white-text" href="#contactus">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col l4 s12">
+              <h5 class="white-text">Contact us</h5>
+              <p>
+                  <b>Email:</b> contacts@girlscript.tech<br>
+                  <b>Phone:</b> +(91) 7000082136
+              </p>
+          </div>
+          <div class="col l5 s12 center">
+              <h5 class="white-text">Connect with us</h5>
+              <ul class="social"><li><a href="https://www.facebook.com/Girlscript/" target="_blank" class="face" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/girlscript1" target="_blank" class="twit" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/girlscript/" target="_blank" class="insta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://github.com/girlscript" class="github" target="_blank" title="Github"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/girlscript-foundation/" class="linkedin" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
+          </div>
+          
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container center">
-        Made by
-        <a class="brown-text text-lighten-3" href="http://materializecss.com">GirlScript Allahabad</a>
+          <p class="mbr-text mbr-fonts-style display-7">
+              All Rights Reserved<br>
+              © Copyright 2018 GirlScript Foundation
+          </p>
+        Made with <i class="fa fa-heart" aria-hidden="true"></i> by
+        <a class="brown-text text-lighten-3" href="https://www.facebook.com/gsiiita/" target="_blank">GirlScript Allahabad</a>
       </div>
     </div>
   </footer>
